@@ -9,8 +9,6 @@ Should handle these soon.
 
 -> Nothing here yet.
 
--> implode
-
 
 FOR THE NEXT RELEASE
 ====================
